<resources>
    <string name="app_name">SafeTravel</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="login">Inicio de Sesión</string>
    <string name="loginP">Por favor, inicie sesión para continuar</string>
    <string name="email">Ingrese su correo</string>
    <string name="password">Ingrese su contraseña</string>
    <string name="log">Comenzar</string>
    <string name="L_account">No tienes una cuenta?</string>
    <string name="register">Registrarse</string>
    <string name="remember">Recordar</string>
    <string name="mail">Correo</string>
    <string name="name">Nombre(s)</string>
    <string name="lastname">Apellido</string>
    <string name="cofpass">Ingrese nuevamente su contraseña</string>
    <string name="welcome">Bienvenido a Safe Travel</string>
    <string name="Search">Buscar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="date">Fecha de nacimiento</string>
</resources>