<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtLogin"
            android:layout_width="355dp"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textAlignment="gravity"
            android:textColor="#000000"
            android:textSize="34sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtLoginP"
            android:layout_width="355dp"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="@string/loginP"
            android:textAlignment="textStart"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edtxtEmailLogin"
            android:layout_width="336dp"
            android:layout_height="66dp"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textAlignment="textStart" />

        <EditText
            android:id="@+id/edtxtPassLogin"
            android:layout_width="336dp"
            android:layout_height="66dp"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textAlignment="textStart" />

        <CheckBox
            android:id="@+id/chkRemember"
            android:layout_width="333dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/remember"
            android:textAlignment="textStart" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/log" />

        <TextView
            android:id="@+id/txtAskLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/L_account"
            android:textAlignment="textStart"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="138dp"
            android:layout_height="48dp"
            android:background="#00FFFFFF"
            android:gravity="center"
            android:text="@string/register"
            android:textColor="#000000" />

    </LinearLayout>

</FrameLayout>