<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterFragment">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="522dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtRegisterR"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/imgAvatar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/register"
            tools:src="@tools:sample/avatars" />

        <EditText
            android:id="@+id/edtNameR"
            android:layout_width="343dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="textEmailAddress"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/edtLasNameR"
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/lastname"
            android:inputType="textPersonName"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/edtPasswordR"
            android:layout_width="344dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/edtConfPassR"
            android:layout_width="347dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/cofpass"
            android:inputType="textPassword"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/edtDateR"
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/date"
            android:inputType="textPersonName"
            android:minHeight="48dp" />

        <Button
            android:id="@+id/btnRegistrar"
            android:layout_width="155dp"
            android:layout_height="wrap_content"
            android:text="@string/register" />

    </LinearLayout>

</FrameLayout>